[package]
name = "xenon-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrender = "0.61.0"

[dependencies.gtk]
package = "gtk4"
version = "0.7.2"
features = [ "v4_12"]

[dependencies.adw]
package = "libadwaita" 
version = "0.5.2" 
features = [ "v1_4" ]
